<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="383dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:text="@string/information"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:onClick="onClick"
        android:text="@string/button_three"
        android:textColor="@color/blue"
        app:cornerRadius="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"

        android:onClick="onClick"

        android:text="@string/button_eleven"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"

        android:onClick="onClick"

        android:text="@string/button_twelve"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"

        android:onClick="onClick"

        android:text="@string/button_nine"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button13" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"

        android:onClick="onClick"

        android:text="@string/button_ten"
        app:layout_constraintBaseline_toBaselineOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/light_blue"
        android:color="@color/light_blue"
        android:onClick="onClick"


        android:text="@string/button_five"
        android:textColor="@color/light_blue"
        app:cornerRadius="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/purple"
        android:onClick="onClick"


        android:text="@string/button_six"
        android:textColor="@color/purple"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/yellow"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"

        android:text="@string/button_four"
        android:textColor="@color/yellow"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"
        android:text="@string/button_one"
        android:textColor="@color/red"

        app:cornerRadius="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/green"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"

        android:text="@string/button_two"
        android:textColor="@color/green"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="162dp"

        android:backgroundTint="#1B0505"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"
        android:text="@string/button_fourteen"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="12dp"

        android:backgroundTint="#1B0505"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"
        android:text="OFF"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"
        android:text="SLOWER"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11" />
    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:onClick="onClick"
        android:soundEffectsEnabled="true"
        android:text="FASTER"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button12" />

</androidx.constraintlayout.widget.ConstraintLayout>